# FBX2glTF

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  FindFBX.cmake  README.md  vcpkg.json
.github/workflows/: linux.yml  macOS-arm64.yml  windows.yml
include/: FBX2glTF.h  mathfu.hpp
include/exporters/: ExporterBase.hpp  GLTFExporter.h  TilesetExporter.h
include/fbx/: Fbx2Raw.hpp  FbxBlendShapesAccess.hpp
include/fbx/materials/: FbxMaterials.hpp
include/gltf/: Raw2Gltf.hpp
include/gltf/properties/: AnimationData.hpp  NodeData.hpp  PrimitiveData.hpp
include/loader/: FbxLoader.h
include/raw/: RawModel.hpp
include/utils/: String_Utils.hpp
src/: FBX2glTF.cpp  FBX2glTF.h  base64.hpp  mathfu.hpp
src/exporters/: GLTFExporter.cpp  TilesetExporter.cpp
src/fbx/: Fbx2Raw.cpp  FbxBlendShapesAccess.cpp  FbxSkinningAccess.cpp  FbxSkinningAccess.hpp
src/fbx/materials/: 3dsMaxPhysicalMaterial.cpp  FbxMaterials.cpp  RoughnessMetallicMaterials.hpp  StingrayPBSMaterial.cpp  TraditionalMaterials.cpp  TraditionalMaterials.hpp
src/gltf/: GltfModel.cpp  Raw2Gltf.cpp  Raw2Gltf.hpp  TextureBuilder.cpp  TextureBuilder.hpp
src/gltf/properties/: AccessorData.cpp  AccessorData.hpp  AnimationData.cpp  BufferData.cpp  BufferData.hpp  BufferViewData.cpp  CameraData.cpp  ImageData.cpp  LightData.cpp  LightData.hpp  MaterialData.cpp  MaterialData.hpp  MeshData.cpp  NodeData.cpp  PrimitiveData.cpp  SceneData.cpp  SkinData.cpp  TextureData.cpp
src/loader/: FbxLoader.cpp
src/raw/: RawModel.cpp  RawModel.hpp
src/utils/: File_Utils.cpp  File_Utils.hpp  Image_Utils.cpp
